# phorecast-ml

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
phorecast_ml/: __init__.py
phorecast_ml/losses/: sum_difference_loss.py
phorecast_ml/metrics/: __init__.py  sum_difference.py  weighted_mean_absolute_percentage_error.py
phorecast_ml/model/: BaseModel.py  LSTM.py  __init__.py
phorecast_ml/preprocessing/: __init__.py  dataset.py  dataset_splitting.py  filtering.py  solar.py  windowing.py
tests/: static.py  test_dataset.py
